--- a/ContosoAPI/ContosoAPI/Web.config
+++ b/ContosoAPI/ContosoAPI/Web.config
@@ -12,6 +12,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <system.webServer>
     <handlers>
@@ -20,6 +23,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -54,6 +62,14 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+    <add name="DatabaseItem" connectionString="data source=contososervsql.database.windows.net;initial catalog=ContosoDB;persist security info=True;user id=testUser;password=4255Micro!4255;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="ContosoDBEntities" connectionString="metadata=res://*/Models.DatabaseItem.csdl|res://*/Models.DatabaseItem.ssdl|res://*/Models.DatabaseItem.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=contososervsql.database.windows.net;initial catalog=ContosoDB;user id=testUser;password=4255Micro!4255;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="0">
+      <listeners>
+        <add name="myAppInsightsListener" type="Microsoft.ApplicationInsights.TraceListener.ApplicationInsightsTraceListener, Microsoft.ApplicationInsights.TraceListener" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
