downsize & clean up

--- a/ContosoAPI/ContosoAPI/Web.config
+++ b/ContosoAPI/ContosoAPI/Web.config
@@ -62,14 +62,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseItem" connectionString="data source=contososervsql.database.windows.net;initial catalog=ContosoDB;persist security info=True;user id=testUser;password=4255Micro!4255;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="ContosoDBEntities" connectionString="metadata=res://*/Models.DatabaseItem.csdl|res://*/Models.DatabaseItem.ssdl|res://*/Models.DatabaseItem.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=contososervsql.database.windows.net;initial catalog=ContosoDB;user id=testUser;password=4255Micro!4255;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DatabaseItem" connectionString="data source=contososervsql.database.windows.net;initial catalog=ContosoDB;persist security info=True;user id=testUser;password=ThisWillBeOverriden!123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ContosoDBEntities" connectionString="metadata=res://*/Models.DatabaseItem.csdl|res://*/Models.DatabaseItem.ssdl|res://*/Models.DatabaseItem.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=contososervsql.database.windows.net;initial catalog=ContosoDB;user id=testUser;password=ThisWillBeOverriden!123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <system.diagnostics>
-    <trace autoflush="true" indentsize="0">
-      <listeners>
-        <add name="myAppInsightsListener" type="Microsoft.ApplicationInsights.TraceListener.ApplicationInsightsTraceListener, Microsoft.ApplicationInsights.TraceListener" />
-      </listeners>
-    </trace>
-  </system.diagnostics>
 </configuration>
